misc english error fixed

--- a/recipes/naan.html
+++ b/recipes/naan.html
@@ -5,8 +5,8 @@
         
     </head>
     <body>
-        <h1><img src="../images/naan.jpg" alt="A round Naan"></h1>
-        <h3>A fluffy Naan</h3>
+        <h1><img src="../images/naan.jpg" alt="A plate of Naan"></h1>
+        <h3>A plate of fluffy Naan</h3>
         <h1>Description</h1>
         <p> Naan (pronounced nahn) is an oven-baked, leavened bread that is stuffed and flavored in a variety of ways. An essential part of South and Central Asian cuisine, naan is easy, affordable, and makes the most of pantry ingredients you already have on hand.
 
